refactor: make ADP and channels platform scoped
